--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "redis": "",
     "validator": "",
     "body-parser"    : "*",
-    "socket.io-redis" : ""
+    "socket.io":"",
+    "socket.io-redis":""
   }
 }
